:bug: [open-formulieren/open-forms#5944] Fix checkbox input not being clickable on iOS 18
Backport-of: open-formulieren/formio-renderer@acda0102c98f86c43f8ed6d47821a7a71ffacd7e

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,3 +77,11 @@ $fa-font-path: '../webfonts/' !default; // vite.config.mts overrides this
 @import './scss/components/govmetric_snippet';
 // TODO: obsolete when the new renderer goes live
 @import './scss/components/soft-required-errors';
+
+// Backports / workarounds
+.utrecht-form-field.utrecht-form-field--openforms.utrecht-form-field--checkbox {
+  .utrecht-custom-checkbox,
+  .utrecht-checkbox--custom {
+    z-index: 0;
+  }
+}
